# Anemos

./: .gitignore  CMakeLists.txt  config.toml
include/: config.h  controls.h  entities.h  input.h  int.h  load.h  model.h  physics.h  render.h  scene.h  timing.h  vertex.h  vkattachment.h  vkbuffer.h  vkcommand.h  vkdescriptor.h  vkdestroy.h  vkdevice.h  vkimage.h  vkinit.h  vkinstance.h  vkmemory.h  vkpipeline.h  vkshader.h  vkstate.h  vkswapchain.h  window.h
libs/KTX-Software/: CMakeLists.txt
libs/KTX-Software/cmake/: version.cmake
libs/KTX-Software/tests/testimages/: astc_mipmap_ldr_10x5_posx.ktx2  astc_mipmap_ldr_12x10_posx.ktx2  astc_mipmap_ldr_12x12_posx.ktx2  astc_mipmap_ldr_6x5_posx.ktx2  astc_mipmap_ldr_6x6_kodim17_fast.ktx2  astc_mipmap_ldr_6x6_kodim17_fastest.ktx2  astc_mipmap_ldr_6x6_kodim17_medium.ktx2  astc_mipmap_ldr_6x6_posx.ktx2  astc_mipmap_ldr_6x6_posy.ktx2  astc_mipmap_ldr_6x6_posz.ktx2  astc_mipmap_ldr_8x6_posx.ktx2  astc_mipmap_ldr_8x8_posx.ktx2  cimg5293_uastc.ktx2  cimg5293_uastc_zstd.ktx2  cubemap_goldengate_uastc_rdo4_zstd5_rd.ktx2  cubemap_yokohama_basis_rd.ktx2  ktx_document_basis.ktx2  (+1 more)
libs/cglm/: CMakeLists.txt
shaders/: compile.sh  shader.frag  shader.vert
src/: CMakeLists.txt  config.cpp  controls.cpp  input.cpp  load.cpp  main.cpp  model.cpp  physics.cpp  render.cpp  scene.cpp  timing.cpp  vertex.cpp  vkattachment.cpp  vkbuffer.cpp  vkcommand.cpp  vkdescriptor.cpp  vkdestroy.cpp  vkdevice.cpp  vkimage.cpp  vkinit.cpp  vkinstance.cpp  vkmemory.cpp  vkpipeline.cpp  vkshader.cpp  vkstate.cpp  vkswapchain.cpp  window.cpp
(+2 files in other folders)
